--- a/Cravings/app/src/main/res/values/strings.xml
+++ b/Cravings/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">FooMoo</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings_main">Log out</string>
+    <string name="action_settings">Log out</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_main">FooMoo</string>
 
