--- a/Cravings/app/src/main/res/values/strings.xml
+++ b/Cravings/app/src/main/res/values/strings.xml
@@ -11,12 +11,13 @@
 
     <string name="craving"></string>
 
+    <!-- Craving Search -->
     <string name="search_hint">Search your Craving</string>
     <string name="menu_search">search_craving_menu</string>
     <string name="title_activity_craving_searchable">CravingSearchable</string>
     <string name="title_activity_main_feed">FooMoo</string>
-    <string name="hello_world">Hello world!</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Events List -->
+    <string name="add_event">Create an Event</string>
+    <string name="event_plus_sign">+</string>
 </resources>
